GNOME Bugzilla – Bug 761498
metadata-manager: first key/value set is lost
Last modified: 2016-02-05 20:26:06 UTC
If the cache metadata file doesn't exist yet, and if the set() function is called first (before get()), the key/value isn't saved. So a code like: gedit_metadata_manager_init (...); gedit_metadata_manager_set (...); The problem is located in this code in set(): > if (!gedit_metadata_manager->values_loaded) > { > gboolean res; > > res = load_values (); > > if (!res) > return; > } load_values() returns FALSE if the file doesn't exist.
Fixed, I'll push the commit soon (when I'm on my personal computer).