metadata-manager: fix bug when xml file doesn't exist yet

It's perfectly fine that the xml file doesn't exist, it means that it's
the first time that the application is used, or at least the first time
that metadata is set.

There was also a memory leak.

https://bugzilla.gnome.org/show_bug.cgi?id=761498